# LLM-dashboard

./: .gitignore  .replit  AUTO_TABLE_FORMATTING.md  Dockerfile.backend  Dockerfile.frontend  Modelfile  NEWSLETTER_FEATURES.md  OLLAMA_DEPLOYMENT.md  PRODUCTION_GRADE_SYSTEM.md  PROMPT_ENGINEERING_IMPLEMENTATION.md  README.md  RELIABILITY.md  docker-compose.yml  keep_alive.py  keep_alive_cron.py  pyproject.toml  render.yaml  replit.md  uploads_extracted.txt
.github/workflows/: keep-alive.yml
attached_assets/: Pasted-RVSK-VSK-Newsletter-Platform-LLM-Chatbot-Accuracy-Bilin_1771395463248.txt  Pasted-RVSK-VSK-Newsletter-Platform-UI-Restructuring-Productio_1771384413623.txt  Pasted-RVSK-VSK-Platform-UI-Corrections-Stat-Consistency-Chatb_1771399639145.txt
backend/: __init__.py  main.py  requirements.txt
backend/api/: __init__.py  admin_handler.py  analytics_handler.py  chat_handler.py  newsletter_handler.py
backend/data/: detailed_context.txt  newsletter_data.json
backend/llm/: __init__.py  data_formatter.py  llm_handler.py  production_cleaner.py  response_formatter.py  source_verification.py  system_prompt.py
backend/rag/: rag_system.py
frontend/: index.html
frontend/css/: dashboard-layers.css  enhanced-ui.css  style.css
frontend/js/: app.js  chat-widget.js  dashboard-layers.js  enhanced-chat.js  sidebar-functionality.js  translations.js
tests/: test_api.py  test_llm_handler.py
